Update and rename cvclaudeai.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nguyễn Văn Minh - Fullstack Developer CV</title>
+    <title>Huu Long Phung - Fullstack Developer CV</title>
     <style>
         * {
             margin: 0;
