--- a/myCV.html
+++ b/myCV.html
@@ -495,9 +495,9 @@ Fullstack Developer with 1+ years of experience developing web applications with
                                 <li>Developing the car parking system with YOLOv5</li>
                                 <li>Developing the fall detection system using YOLOv5</li>
                                 <li>Developing Wind prediction system by Java Spring Boot and Python (Flask) 
-                                <li>Built the company's web system and deployed those websites on the servers (using Ubuntu and Nginx). </li>
+                                <li>Built the company's web system by laravel and deployed those websites on the servers (using Ubuntu and Nginx). </li>
                             </ul>
-                            <div class="tech-stack">PYTHON • FLASK • YOLOv5 • HTML • CSS • JavaScript • Ubuntu • Nginx</div>
+                            <div class="tech-stack">PYTHON • Laravel • FLASK • YOLOv5 • HTML • CSS • JavaScript • Ubuntu • Nginx</div>
                         </div>
                     </div>
 
@@ -508,14 +508,29 @@ Fullstack Developer with 1+ years of experience developing web applications with
                         <div class="location">Address: Starcity Building, 23 Le Van Luong, Thanh Xuan, Hanoi</div> <br>
                         <div class="description">
                             <ul>
-                                <li>Research, develop and manager web Manufacturing Execution System projects.</li>
+                                <li>Research, develop and manager web Manufacturing Execution System projects by Django.</li>
                                 <li>YOLOv3 and PYTHON (FLASK) was applied to detect Amazon code and the company's products.</li>
                                 <li>Keras was applied to build the fire detection system.</li>
                             </ul>
-                            <div class="tech-stack">Laravel • PHP • MySQL • Python • YOLOv3  • FLASK • Keras</div>
+                            <div class="tech-stack">Laravel • PHP • MySQL • Python • Django • YOLOv3  • FLASK • Keras</div>
                         </div>
                     </div>
-
+                    
+                    <div class="experience-item">
+                        <div class="job-title">Fresher Developer</div>
+                        <div class="company">ONLINE VIET NAM COMPANY LIMITED</div>
+                        <div class="duration">5/2021 – 04/2022</div>
+                        <div class="location">Address: No. 173 Xuan Thuy Street, Dich Vong Hau Ward, Cau Giay District, Hanoi City, Vietnam.</div> <br>
+                        <div class="description">
+                            <ul>
+                                <li>Build an ecommerce website using Python (Django).</li>
+                                <li>Optimize SEO and accessibility for company website.</li>
+                                <li>Maintain và update content management system.</li>
+                            </ul>
+                            <div class="tech-stack">HTML5 • CSS3 • JavaScript • Reactjs • Python• Django</div>
+                        </div>
+                    </div>
+                    
                     <div class="experience-item">
                         <div class="job-title">Fresher Developer</div>
                         <div class="company">NODEJS VIETNAM TECHONOLOGY COMPANY (https://nodemy.vn/)</div>
