--- a/myCV.html
+++ b/myCV.html
@@ -495,7 +495,7 @@ Fullstack Developer with 1+ years of experience developing web applications with
                                 <li>Developing the car parking system with YOLOv5</li>
                                 <li>Developing the fall detection system using YOLOv5</li>
                                 <li>Developing Wind prediction system by Java Spring Boot and Python (Flask) 
-                                <li>Built the company's web system by laravel and deployed those websites on the servers (using Ubuntu and Nginx). </li>
+                                <li>Built the company's web system by Laravel and Django and deployed those websites on the servers (using Ubuntu and Nginx). </li>
                             </ul>
                             <div class="tech-stack">PYTHON • Laravel • FLASK • YOLOv5 • HTML • CSS • JavaScript • Ubuntu • Nginx</div>
                         </div>
