--- a/myCV.html
+++ b/myCV.html
@@ -518,7 +518,7 @@ Fullstack Developer with 1+ years of experience developing web applications with
                     
                     <div class="experience-item">
                         <div class="job-title">Fresher Developer</div>
-                        <div class="company">ONLINE VIET NAM COMPANY., Ltd</div>
+                        <div class="company">ONLINE VIET NAM COMPANY LIMITED</div>
                         <div class="duration">5/2021 – 04/2022</div>
                         <div class="location">Address: No. 173 Xuan Thuy Street, Dich Vong Hau Ward, Cau Giay District, Hanoi City, Vietnam.</div> <br>
                         <div class="description">
