--- a/myCV.html
+++ b/myCV.html
@@ -371,7 +371,7 @@
                     <img src="unnamed.png" alt="avatar" />
                 </div>
                 <h1 class="name">Phung Huu Long</h1>
-                <p class="title">Fullstack Developer</p>
+                <p class="title">AI Engineer/Machine Learning (ML) Engineer</p>
                 <div class="contact-info">
                     <div class="contact-item">Email: phunglongtn@gmail.com</div>
                     <div class="contact-item">Phone: (+84) 375-769-686</div>
