--- a/myCV.html
+++ b/myCV.html
@@ -477,7 +477,7 @@
                 <section class="section">
                     <h3 class="section-title">Career Objective</h3>
                     <div class="objective">
-Fullstack Developer with 1+ years of experience developing web applications with JavaScript, Node.js, Laravel, Django and modern technologies. Want to join a dynamic working environment to contribute to building technology products with positive impact. Besides, I want to contribute to projects using AI for the company.
+Fullstack Developer with 3 years of experience developing web applications with JavaScript, Node.js, Laravel, Django and modern technologies. Want to join a dynamic working environment to contribute to building technology products with positive impact. Besides, I want to contribute to projects using AI for the company.
                     </div>
                 </section>
 
