--- a/PHUNGHUULONG_DATAENGINEER.html
+++ b/PHUNGHUULONG_DATAENGINEER.html
@@ -489,8 +489,8 @@
                 <section class="section">
                     <h3 class="section-title">Career Objective</h3>
                     <div class="objective">
-                        Fullstack Developer with 3 years of experience developing web applications with JavaScript, Node.js, Laravel, Django 
-                        and modern technologies. I would like to join a dynamic working environment to contribute to building technology products 
+                        Fullstack Developer with 3 years of experience developing web applications with Java Spring Boot, Node.js, Laravel, Django 
+                        and Javascript. I would like to join a dynamic working environment to contribute to building technology products 
                         with positive impact. Besides, I want to contribute to projects using AI for the company.
                     </div>
                 </section>
