--- a/PHUNGHUULONG_JAVA_BE.html
+++ b/PHUNGHUULONG_JAVA_BE.html
@@ -519,10 +519,10 @@
                                 <li>Developing the car parking system with YOLOv5</li>
                                 <li>Developing the fall detection system using YOLOv5</li>
                                 <li>Developing Wind prediction system by Java Spring Boot and Python (Flask)</li>
-                                <li>Build a wind data processing system using Spark and Scala, optimize the processing flow of more than 1 million records/day, increase processing speed by 90% using Data Modeling techniques and measure by FPS.</li>
+                                <li>Build a wind data processing system using Java Spring Boot, Spark and Scala, optimize the processing flow of more than 1 million records/day, increase processing speed by 90% using Data Modeling techniques and measure by FPS.</li>
                                 <li>Built the company's web system by Laravel and Django and deployed those websites on the servers (using Ubuntu and Nginx). </li>
                             </ul>
-                            <div class="tech-stack">PYTHON • Laravel • FLASK • YOLOv5 • HTML • CSS • JavaScript • Ubuntu •  • Nginx</div>
+                            <div class="tech-stack">PYTHON • Laravel • FLASK • YOLOv5 • HTML • CSS • JavaScript • Ubuntu • Java Spring Boot • Spark • Scala • Nginx</div>
                         </div>
                     </div>
 
@@ -582,12 +582,12 @@
                         <div class="location">Address: Intracom Building - 82 Dich Vong Hau, Hanoi, Vietnam</div> <br>
                         <div class="description">
                             <ul>
-                                <li>Researching Python OOP and gathering data by selenium.</li>
+                                <li>Researching JAVA Spring Boot and gathering data by selenium.</li>
                                 <li>Using PHP LARAVEL and python to create web like https://apkcombo.com/vi/.</li>
                                 <li>Optimizing website by some SEO tools like https://pagespeed.web.dev/ and so on. </li>
                                 <li>Deploying the company’s website on the CentOS server.</li>
                             </ul>
-                            <div class="tech-stack">HTML5 • CSS3 • JavaScript • Python • Laravel• CentOS</div>
+                            <div class="tech-stack">HTML5 • CSS3 • JavaScript • JAVA Spring Boot • Laravel • CentOS</div>
                         </div>
                     </div>
 
