--- a/aiengineer_viettel.html
+++ b/aiengineer_viettel.html
@@ -699,7 +699,7 @@
                                     <li>OUR REAL DATA SETS ARE COLLECTED FROM FACTORIES AND SURROUNDING ENVIRONMENTS.</li>
                                 </ul>
                             </div>
-                            <p><strong>TECHNOLOGIES:</strong> JAVA SPRING BOOT, PYTHON, CRON JOB, WEBSOCKET, REST API, MYSQL, HTML, CSS, JavaScript, Ubuntu Server, Nginx.</p>
+                            <p><strong>TECHNOLOGIES:</strong> JAVA SPRING BOOT, PYTHON, CRON JOB, REST API, MYSQL, HTML, CSS, JavaScript, Ubuntu Server, Nginx.</p>
                             <p><strong>KEY RESPONSIBILITIES:</strong></p>
                             <div class="description">
                                 <ul>
@@ -729,7 +729,7 @@
                                     <li>Our custom datasets</li>
                                 </ul>
                             </div>
-                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, OPENCV, TensorRT, ONNX Runtime, WEBSOCKET, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
+                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, OPENCV, TensorRT, ONNX Runtime, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
                             <p><strong>KEY RESPONSIBILITIES:</strong></p>
                             <div class="description">
                                 <ul>
@@ -755,7 +755,7 @@
                                     <li>Car Parking Lot dataset</li>
                                 </ul>
                             </div>
-                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, TensorRT, ONNX Runtime, OPENCV, WEBSOCKET, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
+                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, TensorRT, ONNX Runtime, OPENCV, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
                             <p><strong>KEY RESPONSIBILITIES:</strong></p>
                             <div class="description">
                                 <ul>
@@ -784,7 +784,7 @@
                                     <li>People Detection Computer Vision Project (PDCVP) dataset</li>
                                 </ul>
                             </div>
-                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, OPENCV, WEBSOCKET, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
+                            <p><strong>TECHNOLOGIES:</strong> PYTHON, FLASK, OPENCV, REST API, MYSQL, YOLOv5, HTML, CSS, JavaScript, Ubuntu Server, Nginx, Docker and Docker compose.</p>
                             <p><strong>KEY RESPONSIBILITIES:</strong></p>
                             <div class="description">
                                 <ul>
