--- a/PHUNGHUULONGCV_AI_CV_KALAPA., JSC.html
+++ b/PHUNGHUULONGCV_AI_CV_KALAPA., JSC.html
@@ -670,7 +670,7 @@
                 <section class="section">
                     <h3 class="section-title">Career Objective</h3>
                     <div class="objective">
-                        PHUNG HUU LONG received a Bachelor of Engineering in Software Engineering from Ha Noi University of Business and Technology, Vietnam (2022), and a Master's degree in Artificial Intelligence from the University of Ulsan, South Korea (2025). He worked as an AI Researcher at TOSY Robotics JSC, Ha Noi, Vietnam, and later as an AI Engineer at HTWAVE Technology Co., Ltd, Ulsan, South Korea. With proven experience in computer vision and IoT projects, I aim to deploy AI models from prototype to production, optimizing both performance and scalability. My goal is to contribute to KALAPA., JSC's AI solutions in smart city, telecommunications, and big data applications.
+                        PHUNG HUU LONG received a Bachelor of Engineering in Software Engineering from Ha Noi University of Business and Technology, Vietnam (2022), and a Master's degree in Artificial Intelligence from the University of Ulsan, South Korea (2025). He worked as an AI Researcher at TOSY Robotics JSC, Ha Noi, Vietnam, and later as an AI Engineer at HTWAVE Technology Co., Ltd, Ulsan, South Korea. With proven experience in computer vision and IoT projects, I aim to deploy AI models from prototype to production, optimizing both performance and scalability. My goal is to contribute to KALAPA., JSC's AI solutions in object detection and character recognition systems.
                     </div>
                 </section>
 
