--- a/PHUNGHUULONG_CV_VMOHOLDING.html
+++ b/PHUNGHUULONG_CV_VMOHOLDING.html
@@ -595,7 +595,7 @@
                     <div class="skills-category">
                         <h4>Backend</h4>
                         <div class="skills-list">
-                            <span class="skill-tag">JavaScript (Express, NestJS)</span>
+                            <span class="skill-tag">JavaScript (ExpressJS)</span>
                             <span class="skill-tag">Python (Django, Flask, FastAPI)</span>
                             <span class="skill-tag">Java (Spring Boot, Spark)</span>
                             <span class="skill-tag">PHP (Laravel)</span>
@@ -1061,3 +1061,4 @@
                                 </ul>
                             </div>
                         </div>
+
