--- a/PHUNGHUULONG_CV_VMOHOLDING.html
+++ b/PHUNGHUULONG_CV_VMOHOLDING.html
@@ -753,32 +753,13 @@
                                     <div class="meta-label">Team size: 6</div>
                                 </div>
                             </div>
-                            <strong>TECHNOLOGIES:</strong>Python(FLASK, Flitz, SMTP), VietOCR, Airflow, Gitlab.</p>
+                            <strong>TECHNOLOGIES:</strong>Python(FLASK, Flitz, SMTP, PANDAS), VietOCR, Airflow, Gitlab.</p>
                             <p><strong>KEY RESPONSIBILITIES:</strong></p>
                             <div class="description">
                                 <ul>
                                     <li>Use Flitz to detect text PDF files and use VietOCR to detect image PDF files in which 90% (printed text), 5% (digital signature and handwritten signature), 5% images.</li>
                                     <li>Using Python (Flask) to integrate with results of ORACLE where.</li>
-                                    <li>This system used Spark and S3 that </li>
-                                    <li>Airflow is used for scheduling task of calculating 100.000.000 queries every day.</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="project">
-                            <div class="project-title">OCR documents for MB Bank departments</div>
-                            <div class="project-meta">
-                                <div class="meta-item">
-                                    <div class="meta-label">Team size: 6</div>
-                                </div>
-                            </div>
-                            <strong>TECHNOLOGIES:</strong>Python(FLASK, Flitz, SMTP), VietOCR, Airflow, Gitlab.</p>
-                            <p><strong>KEY RESPONSIBILITIES:</strong></p>
-                            <div class="description">
-                                <ul>
-                                    <li>Use Flitz to detect text PDF files and use VietOCR to detect image PDF files in which 90% (printed text), 5% (digital signature and handwritten signature), 5% images.</li>
-                                    <li>Using Python (Flask) to integrate with results of ORACLE.</li>
-                                    <li>This system used Spark and S3 that </li>
-                                    <li>Airflow is used for scheduling task of calculating 100.000.000 queries every day.</li>
+                                    <li>Airflow is used for scheduling task of extracting data from PDF and Excel every day.</li>
                                 </ul>
                             </div>
                         </div>
@@ -1061,5 +1042,6 @@
                                 </ul>
                             </div>
                         </div>
+
 
 
